Second By Shubham

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_project">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ProducerModernDashboard"></activity>
+        <activity android:name=".ConsumerModernDashboard" />
+        <activity android:name=".Register" />
+        <activity android:name=".Login" />
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
