--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_project">
-        <activity android:name=".ProducerModernDashboard"></activity>
+        <activity android:name=".AddNewProduct"></activity>
+        <activity android:name=".ProducerModernDashboard" />
         <activity android:name=".ConsumerModernDashboard" />
         <activity android:name=".Register" />
         <activity android:name=".Login" />
