--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,17 @@
         <activity android:name=".ProducerModernDashboard" />
         <activity android:name=".ConsumerModernDashboard" />
         <activity android:name=".Register" />
-        <activity android:name=".Login" />
-        <activity android:name=".SplashActivity">
+        <activity android:name=".Login" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".SplashActivity">
+
         </activity>
 
         <meta-data
