--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_project">
-
-        <activity android:name=".EditProfile"></activity>
+        <activity android:name=".AddNewItemProducer"></activity>
+        <activity android:name=".ProducerAddMenuItem" />
+        <activity android:name=".EditProfile" />
         <activity android:name=".ProducerModernDashboard" />
         <activity android:name=".ConsumerModernDashboard" />
         <activity android:name=".Register" />
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity"></activity>
-
+        <activity android:name=".SplashActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
