--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_project">
-        <activity android:name=".AddNewItemProducer"></activity>
+        <activity android:name=".ConsumerRecyclerView"></activity>
+        <activity android:name=".AddNewItemProducer" />
         <activity android:name=".ProducerAddMenuItem" />
         <activity android:name=".EditProfile" />
         <activity android:name=".ProducerModernDashboard" />
